--- a/www.cdep.ro/4755b622c5980046da576c5657b22af845518a24.html
+++ b/www.cdep.ro/4755b622c5980046da576c5657b22af845518a24.html
@@ -262,7 +262,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Avram_Constantin.jpg" border=0 width="150" alt="Constantin Avram">
+<a href="/parlamentari/l2012/mari/Avram_Constantin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Avram_Constantin.jpg" border=0 width="150" alt="Constantin Avram"></a>
 <br>b.  10 jun. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Constantin AVRAM</h1>
 <div class="page-actions">
