200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=8&leg=2012

--- a/www.cdep.ro/b9405fccf2cc1ff914b573d6ce54f3a04c32d27a.html
+++ b/www.cdep.ro/b9405fccf2cc1ff914b573d6ce54f3a04c32d27a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Anastase_Roberta.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Anastase_Roberta.jpg" border=0 width="150" alt="Roberta Alma Anastase"></a>
+<img src="/parlamentari/l2012/Anastase_Roberta.jpg" border=0 width="150" alt="Roberta Alma Anastase">
 <br>b.  27 mar. 1976
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Roberta Alma ANASTASE</h1>
 <div class="page-actions">
