200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=13&leg=2012

--- a/www.cdep.ro/b49b20eaf538d86c1c1641d17d14be22e4740b58.html
+++ b/www.cdep.ro/b49b20eaf538d86c1c1641d17d14be22e4740b58.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Anton_Marin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Anton_Marin.jpg" border=0 width="150" alt="Marin Anton"></a>
+<img src="/parlamentari/l2012/Anton_Marin.jpg" border=0 width="150" alt="Marin Anton">
 <br>b.  8 may 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Marin ANTON</h1>
 <div class="page-actions">
