200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=15&leg=2012

--- a/www.cdep.ro/b38e853b5227986cb2a2b35d4c37dbcccedc72ef.html
+++ b/www.cdep.ro/b38e853b5227986cb2a2b35d4c37dbcccedc72ef.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Ardeleanu_Sanda_Maria.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ardeleanu_Sanda_Maria.jpg" border=0 width="150" alt="Sanda-Maria Ardeleanu"></a>
+<img src="/parlamentari/l2012/Ardeleanu_Sanda_Maria.jpg" border=0 width="150" alt="Sanda-Maria Ardeleanu">
 <br>b.  10 aug. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Sanda-Maria ARDELEANU</h1>
 <div class="page-actions">
