--- a/www.cdep.ro/42742480fd80570de28436c7dfc089c45995bcab.html
+++ b/www.cdep.ro/42742480fd80570de28436c7dfc089c45995bcab.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Balan_Ioan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Balan_Ioan.jpg" border=0 width="150" alt="Ioan Balan"></a>
+<img src="/parlamentari/l2012/Balan_Ioan.jpg" border=0 width="150" alt="Ioan Balan">
 <br>b.  22 jan. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan BALAN</h1>
 <div class="page-actions">
