--- a/www.cdep.ro/66019d95ede789d33d90144826e4008df6240c73.html
+++ b/www.cdep.ro/66019d95ede789d33d90144826e4008df6240c73.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Balan_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Balan_Ion.jpg" border=0 width="150" alt="Ion Bãlan"></a>
+<img src="/parlamentari/l2012/Balan_Ion.jpg" border=0 width="150" alt="Ion Bãlan">
 <br>b.  19 apr. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion BÃLAN</h1>
 <div class="page-actions">
