200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=26&leg=2012

--- a/www.cdep.ro/131fd43af0dfcb0f2dc1a27a88c60ca0d1d156a3.html
+++ b/www.cdep.ro/131fd43af0dfcb0f2dc1a27a88c60ca0d1d156a3.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Barbulescu_Daniel_Ionut.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Barbulescu_Daniel_Ionut.jpg" border=0 width="150" alt="Daniel-Ionuþ Bãrbulescu"></a>
+<img src="/parlamentari/l2012/Barbulescu_Daniel_Ionut.jpg" border=0 width="150" alt="Daniel-Ionuþ Bãrbulescu">
 <br>b.  17 aug. 1981
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Daniel-Ionuþ BÃRBULESCU</h1>
 <div class="page-actions">
