--- a/www.cdep.ro/3abbf2c18539d305a8e88d8d8ec62448192a3590.html
+++ b/www.cdep.ro/3abbf2c18539d305a8e88d8d8ec62448192a3590.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Bejinariu_Eugen.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Bejinariu_Eugen.jpg" border=0 width="150" alt="Eugen Bejinariu"></a>
+<img src="/parlamentari/l2012/Bejinariu_Eugen.jpg" border=0 width="150" alt="Eugen Bejinariu">
 <br>b.  28 jan. 1959
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Eugen BEJINARIU</h1>
 <div class="page-actions">
