--- a/www.cdep.ro/c2fc14123f633af94d428dedba39901f14e3ef07.html
+++ b/www.cdep.ro/c2fc14123f633af94d428dedba39901f14e3ef07.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Boboc_Valentin_Gabriel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Boboc_Valentin_Gabriel.jpg" border=0 width="150" alt="Valentin Gabriel Boboc"></a>
+<img src="/parlamentari/l2012/Boboc_Valentin_Gabriel.jpg" border=0 width="150" alt="Valentin Gabriel Boboc">
 <br>b.  24 mar. 1966
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Valentin Gabriel BOBOC</h1>
 <div class="page-actions">
