--- a/www.cdep.ro/793522024887335ff36115556142e9e766e54695.html
+++ b/www.cdep.ro/793522024887335ff36115556142e9e766e54695.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Bode_Lucian_Nicolae.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Bode_Lucian_Nicolae.jpg" border=0 width="150" alt="Lucian Nicolae Bode"></a>
+<img src="/parlamentari/l2012/Bode_Lucian_Nicolae.jpg" border=0 width="150" alt="Lucian Nicolae Bode">
 <br>b.  27 oct. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Lucian Nicolae BODE</h1>
 <div class="page-actions">
