--- a/www.cdep.ro/ce7fb14c21d4746e65277af6ed8e722ff1768ecf.html
+++ b/www.cdep.ro/ce7fb14c21d4746e65277af6ed8e722ff1768ecf.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Borbely_Laszlo.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Borbely_Laszlo.jpg" border=0 width="150" alt="László Borbély"></a>
+<img src="/parlamentari/l2012/Borbely_Laszlo.jpg" border=0 width="150" alt="László Borbély">
 <br>b.  26 mar. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">BORBÉLY László</h1>
 <div class="page-actions">
