--- a/www.cdep.ro/ecb6f525d1a201b12f4485807c0c3023abff3f5d.html
+++ b/www.cdep.ro/ecb6f525d1a201b12f4485807c0c3023abff3f5d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Bordeianu_Dan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Bordeianu_Dan.jpg" border=0 width="150" alt="Dan Bordeianu"></a>
+<img src="/parlamentari/l2012/Bordeianu_Dan.jpg" border=0 width="150" alt="Dan Bordeianu">
 <br>b.  9 may 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dan BORDEIANU</h1>
 <div class="page-actions">
