200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=45&leg=2012

--- a/www.cdep.ro/086c3babcb6ac8fb71f620e892bbfb4823baf54f.html
+++ b/www.cdep.ro/086c3babcb6ac8fb71f620e892bbfb4823baf54f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Bucura_Oprescu_Simona.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Bucura_Oprescu_Simona.jpg" border=0 width="150" alt="Simona Bucura-Oprescu"></a>
+<img src="/parlamentari/l2012/Bucura_Oprescu_Simona.jpg" border=0 width="150" alt="Simona Bucura-Oprescu">
 <br>b.  2 apr. 1980
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Simona BUCURA-OPRESCU</h1>
 <div class="page-actions">
