--- a/www.cdep.ro/eccfe957f8571072607561818b9d15408f1921f0.html
+++ b/www.cdep.ro/eccfe957f8571072607561818b9d15408f1921f0.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Burlacu_Stefan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Burlacu_Stefan.jpg" border=0 width="150" alt="ªtefan Burlacu"></a>
+<img src="/parlamentari/l2012/Burlacu_Stefan.jpg" border=0 width="150" alt="ªtefan Burlacu">
 <br>b.  29 jul. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">ªtefan BURLACU</h1>
 <div class="page-actions">
