--- a/www.cdep.ro/6861911a749e8eeb8eab58ee4dd9c663b4ee305b.html
+++ b/www.cdep.ro/6861911a749e8eeb8eab58ee4dd9c663b4ee305b.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Calin_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Calin_Ion.jpg" border=0 width="150" alt="Ion Cãlin"></a>
+<img src="/parlamentari/l2012/Calin_Ion.jpg" border=0 width="150" alt="Ion Cãlin">
 <br>b.  21 apr. 1951
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion CÃLIN</h1>
 <div class="page-actions">
