--- a/www.cdep.ro/f620bd8100a5bcfaa9266db726ee1af36e4d3e06.html
+++ b/www.cdep.ro/f620bd8100a5bcfaa9266db726ee1af36e4d3e06.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Chirtes_Ioan_Cristian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Chirtes_Ioan_Cristian.jpg" border=0 width="150" alt="Ioan-Cristian Chirteº"></a>
+<img src="/parlamentari/l2012/Chirtes_Ioan_Cristian.jpg" border=0 width="150" alt="Ioan-Cristian Chirteº">
 <br>b.  9 feb. 1972
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan-Cristian CHIRTEª</h1>
 <div class="page-actions">
