--- a/www.cdep.ro/a3168ea2c83efb1e7c50e865fb7418dda3e7e91f.html
+++ b/www.cdep.ro/a3168ea2c83efb1e7c50e865fb7418dda3e7e91f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Ciobanu_Liliana.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ciobanu_Liliana.jpg" border=0 width="150" alt="Liliana Ciobanu"></a>
+<img src="/parlamentari/l2012/Ciobanu_Liliana.jpg" border=0 width="150" alt="Liliana Ciobanu">
 <br>b.  17 apr. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Liliana CIOBANU</h1>
 <div class="page-actions">
