200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=73&leg=2012

--- a/www.cdep.ro/3f729f6f7fe8adeb23bf854a93154527346a6651.html
+++ b/www.cdep.ro/3f729f6f7fe8adeb23bf854a93154527346a6651.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Ciuhodaru_Tudor.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ciuhodaru_Tudor.jpg" border=0 width="150" alt="Tudor Ciuhodaru"></a>
+<img src="/parlamentari/l2012/Ciuhodaru_Tudor.jpg" border=0 width="150" alt="Tudor Ciuhodaru">
 <br>b.  16 jan. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Tudor CIUHODARU</h1>
 <div class="page-actions">
