--- a/www.cdep.ro/1f78b43987dfdf1a345057537746f1cc3af66784.html
+++ b/www.cdep.ro/1f78b43987dfdf1a345057537746f1cc3af66784.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Codirla_Liviu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Codirla_Liviu.jpg" border=0 width="150" alt="Liviu Codîrlã"></a>
+<img src="/parlamentari/l2012/Codirla_Liviu.jpg" border=0 width="150" alt="Liviu Codîrlã">
 <br>b.  25 jan. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Liviu CODÎRLÃ</h1>
 <div class="page-actions">
