200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=78&leg=2012

--- a/www.cdep.ro/cd025feb3bf47dc948587a7f4aafe0cb2ef37b7a.html
+++ b/www.cdep.ro/cd025feb3bf47dc948587a7f4aafe0cb2ef37b7a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Comsa_Cornel_George.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Comsa_Cornel_George.jpg" border=0 width="150" alt="Cornel-George Comºa"></a>
+<img src="/parlamentari/l2012/Comsa_Cornel_George.jpg" border=0 width="150" alt="Cornel-George Comºa">
 <br>b.  5 may 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cornel-George COMªA</h1>
 <div class="page-actions">
