--- a/www.cdep.ro/1a79ec06676127f477defd8ed3a382fe3b5e0501.html
+++ b/www.cdep.ro/1a79ec06676127f477defd8ed3a382fe3b5e0501.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Craciunescu_Grigore.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Craciunescu_Grigore.jpg" border=0 width="150" alt="Grigore Crãciunescu"></a>
+<img src="/parlamentari/l2012/Craciunescu_Grigore.jpg" border=0 width="150" alt="Grigore Crãciunescu">
 <br>b.  30 sep. 1948
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Grigore CRÃCIUNESCU</h1>
 <div class="page-actions">
