200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=89&leg=2012

--- a/www.cdep.ro/6cdd101b1e3b6d740ab95b60c41889e12e522dcb.html
+++ b/www.cdep.ro/6cdd101b1e3b6d740ab95b60c41889e12e522dcb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Cseke_Attila_Zoltan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cseke_Attila_Zoltan.jpg" border=0 width="150" alt="Attila-Zoltán Cseke"></a>
+<img src="/parlamentari/l2012/Cseke_Attila_Zoltan.jpg" border=0 width="150" alt="Attila-Zoltán Cseke">
 <br>b.  9 jun. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">CSEKE Attila-Zoltán</h1>
 <div class="page-actions">
