--- a/www.cdep.ro/a73143d43f8801de45ec55429045993f8e1ff7da.html
+++ b/www.cdep.ro/a73143d43f8801de45ec55429045993f8e1ff7da.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Cupsa_Ioan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cupsa_Ioan.jpg" border=0 width="150" alt="Ioan Cupºa"></a>
+<img src="/parlamentari/l2012/Cupsa_Ioan.jpg" border=0 width="150" alt="Ioan Cupºa">
 <br>b.  25 sep. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan CUPªA</h1>
 <div class="page-actions">
