--- a/www.cdep.ro/e57de084bcdb71de33f3e8939847b67f88bb88ff.html
+++ b/www.cdep.ro/e57de084bcdb71de33f3e8939847b67f88bb88ff.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Daea_Petre.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Daea_Petre.jpg" border=0 width="150" alt="Petre Daea"></a>
+<img src="/parlamentari/l2012/Daea_Petre.jpg" border=0 width="150" alt="Petre Daea">
 <br>b.  2 nov. 1949
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Petre DAEA</h1>
 <div class="page-actions">
