--- a/www.cdep.ro/644eab61920af877e25a65a8df5732640d82c1bf.html
+++ b/www.cdep.ro/644eab61920af877e25a65a8df5732640d82c1bf.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Deaconu_Mihai.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Deaconu_Mihai.jpg" border=0 width="150" alt="Mihai Deaconu"></a>
+<img src="/parlamentari/l2012/Deaconu_Mihai.jpg" border=0 width="150" alt="Mihai Deaconu">
 <br>b.  16 may 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai DEACONU</h1>
 <div class="page-actions">
