--- a/www.cdep.ro/87d2d852f42a40714c5223511f406507c492777e.html
+++ b/www.cdep.ro/87d2d852f42a40714c5223511f406507c492777e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dirzu_Ioan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dirzu_Ioan.jpg" border=0 width="150" alt="Ioan Dîrzu"></a>
+<img src="/parlamentari/l2012/Dirzu_Ioan.jpg" border=0 width="150" alt="Ioan Dîrzu">
 <br>b.  1 feb. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan DÎRZU</h1>
 <div class="page-actions">
