--- a/www.cdep.ro/977217e41cd2988a694dccfb35fbadcf350c15ca.html
+++ b/www.cdep.ro/977217e41cd2988a694dccfb35fbadcf350c15ca.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dolha_Nechita_Stelian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dolha_Nechita_Stelian.jpg" border=0 width="150" alt="Nechita-Stelian Dolha"></a>
+<img src="/parlamentari/l2012/Dolha_Nechita_Stelian.jpg" border=0 width="150" alt="Nechita-Stelian Dolha">
 <br>b.  19 apr. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Nechita-Stelian DOLHA</h1>
 <div class="page-actions">
