--- a/www.cdep.ro/870680e9db51500ae1a86cdef8c7c3293f83ee09.html
+++ b/www.cdep.ro/870680e9db51500ae1a86cdef8c7c3293f83ee09.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dragomir_Gheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dragomir_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Dragomir"></a>
+<img src="/parlamentari/l2012/Dragomir_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Dragomir">
 <br>b.  12 jan. 1963
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe DRAGOMIR</h1>
 <div class="page-actions">
