200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=118&leg=2012

--- a/www.cdep.ro/8e1ac3d8579cb110357ccdfe01325592fde46374.html
+++ b/www.cdep.ro/8e1ac3d8579cb110357ccdfe01325592fde46374.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dumbravanu_Paul.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dumbravanu_Paul.jpg" border=0 width="150" alt="Paul Dumbrãvanu"></a>
+<img src="/parlamentari/l2012/Dumbravanu_Paul.jpg" border=0 width="150" alt="Paul Dumbrãvanu">
 <br>b.  2 oct. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Paul DUMBRÃVANU</h1>
 <div class="page-actions">
