--- a/www.cdep.ro/a8743a3fa8f9df3720694f1954cf586c4300876a.html
+++ b/www.cdep.ro/a8743a3fa8f9df3720694f1954cf586c4300876a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dumitrache_Ileana_Cristina.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dumitrache_Ileana_Cristina.jpg" border=0 width="150" alt="Ileana Cristina Dumitrache"></a>
+<img src="/parlamentari/l2012/Dumitrache_Ileana_Cristina.jpg" border=0 width="150" alt="Ileana Cristina Dumitrache">
 <br>b.  1 dec. 1982
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ileana Cristina DUMITRACHE</h1>
 <div class="page-actions">
