200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=120&leg=2012

--- a/www.cdep.ro/26e47d3a28857f9fca5fab9c421571ecc8f73390.html
+++ b/www.cdep.ro/26e47d3a28857f9fca5fab9c421571ecc8f73390.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dumitru_Georgica.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dumitru_Georgica.jpg" border=0 width="150" alt="Georgicã Dumitru"></a>
+<img src="/parlamentari/l2012/Dumitru_Georgica.jpg" border=0 width="150" alt="Georgicã Dumitru">
 <br>b.  31 mar. 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Georgicã DUMITRU</h1>
 <div class="page-actions">
