200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=128&leg=2012

--- a/www.cdep.ro/d7663fb803add462bf0e0f4f53e2b37e4eb95ef9.html
+++ b/www.cdep.ro/d7663fb803add462bf0e0f4f53e2b37e4eb95ef9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Erdei_Doloczi_Istvan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Erdei_Doloczi_Istvan.jpg" border=0 width="150" alt="István Erdei Dolóczki"></a>
+<img src="/parlamentari/l2012/Erdei_Doloczi_Istvan.jpg" border=0 width="150" alt="István Erdei Dolóczki">
 <br>b.  1 may 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">ERDEI DOLÓCZKI István</h1>
 <div class="page-actions">
