200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=137&leg=2012

--- a/www.cdep.ro/4df4095e15afe4c808da25d18726d7b891f03c1d.html
+++ b/www.cdep.ro/4df4095e15afe4c808da25d18726d7b891f03c1d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Galan_Constantin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Galan_Constantin.jpg" border=0 width="150" alt="Constantin Galan"></a>
+<img src="/parlamentari/l2012/Galan_Constantin.jpg" border=0 width="150" alt="Constantin Galan">
 <br>b.  17 dec. 1956
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Constantin GALAN</h1>
 <div class="page-actions">
