--- a/www.cdep.ro/78b98297ec6659da787c9f8f6eea667edac449a1.html
+++ b/www.cdep.ro/78b98297ec6659da787c9f8f6eea667edac449a1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Gant_Ovidiu_Victor.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gant_Ovidiu_Victor.jpg" border=0 width="150" alt="Ovidiu Victor Ganþ"></a>
+<img src="/parlamentari/l2012/Gant_Ovidiu_Victor.jpg" border=0 width="150" alt="Ovidiu Victor Ganþ">
 <br>b.  18 aug. 1966
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ovidiu Victor GANÞ</h1>
 <div class="page-actions">
