200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=141&leg=2012

--- a/www.cdep.ro/eedd931624412b20a5a2680b8c7c9dabced18a4d.html
+++ b/www.cdep.ro/eedd931624412b20a5a2680b8c7c9dabced18a4d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Geanta_Florian_Daniel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Geanta_Florian_Daniel.jpg" border=0 width="150" alt="Florian Daniel Geantã"></a>
+<img src="/parlamentari/l2012/Geanta_Florian_Daniel.jpg" border=0 width="150" alt="Florian Daniel Geantã">
 <br>b.  24 aug. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florian Daniel GEANTÃ</h1>
 <div class="page-actions">
