200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=142&leg=2012

--- a/www.cdep.ro/ed5f9d16ae39149818a4ff4f8b93c7223a4f1c8f.html
+++ b/www.cdep.ro/ed5f9d16ae39149818a4ff4f8b93c7223a4f1c8f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Gerea_Andrei_Dominic.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gerea_Andrei_Dominic.jpg" border=0 width="150" alt="Andrei Dominic Gerea"></a>
+<img src="/parlamentari/l2012/Gerea_Andrei_Dominic.jpg" border=0 width="150" alt="Andrei Dominic Gerea">
 <br>b.  8 sep. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Andrei Dominic GEREA</h1>
 <div class="page-actions">
