200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=150&leg=2012

--- a/www.cdep.ro/1b887314ae20148c8152a8f36cb6b840d18c4e2c.html
+++ b/www.cdep.ro/1b887314ae20148c8152a8f36cb6b840d18c4e2c.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Gliga_Vasile_Ghiorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gliga_Vasile_Ghiorghe.jpg" border=0 width="150" alt="Vasile Ghiorghe Gliga"></a>
+<img src="/parlamentari/l2012/Gliga_Vasile_Ghiorghe.jpg" border=0 width="150" alt="Vasile Ghiorghe Gliga">
 <br>b.  3 apr. 1959
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vasile Ghiorghe GLIGA</h1>
 <div class="page-actions">
