200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=152&leg=2012

--- a/www.cdep.ro/032ab310ac8db351dabf81333193863c72170a44.html
+++ b/www.cdep.ro/032ab310ac8db351dabf81333193863c72170a44.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Grama_Horia.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Grama_Horia.jpg" border=0 width="150" alt="Horia Grama"></a>
+<img src="/parlamentari/l2012/Grama_Horia.jpg" border=0 width="150" alt="Horia Grama">
 <br>b.  28 feb. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Horia GRAMA</h1>
 <div class="page-actions">
