--- a/www.cdep.ro/35710025ee3014cdd990c0ced6c2b1dec58d46dd.html
+++ b/www.cdep.ro/35710025ee3014cdd990c0ced6c2b1dec58d46dd.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Gunia_Dragos_Ionel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gunia_Dragos_Ionel.jpg" border=0 width="150" alt="Dragoº-Ionel Gunia"></a>
+<img src="/parlamentari/l2012/Gunia_Dragos_Ionel.jpg" border=0 width="150" alt="Dragoº-Ionel Gunia">
 <br>b.  19 jul. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dragoº-Ionel GUNIA</h1>
 <div class="page-actions">
