--- a/www.cdep.ro/b82c1e2b711423c2c78562a772c82292b959d611.html
+++ b/www.cdep.ro/b82c1e2b711423c2c78562a772c82292b959d611.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Iacoban_Sorin_Avram.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Iacoban_Sorin_Avram.jpg" border=0 width="150" alt="Sorin-Avram Iacoban"></a>
+<img src="/parlamentari/l2012/Iacoban_Sorin_Avram.jpg" border=0 width="150" alt="Sorin-Avram Iacoban">
 <br>b.  15 oct. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Sorin-Avram IACOBAN</h1>
 <div class="page-actions">
