--- a/www.cdep.ro/ea222dae29f35eb151868cdbc25eed51315de202.html
+++ b/www.cdep.ro/ea222dae29f35eb151868cdbc25eed51315de202.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Iane_Daniel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Iane_Daniel.jpg" border=0 width="150" alt="Daniel Iane"></a>
+<img src="/parlamentari/l2012/Iane_Daniel.jpg" border=0 width="150" alt="Daniel Iane">
 <br>b.  20 jun. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Daniel IANE</h1>
 <div class="page-actions">
