200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=184&leg=2012

--- a/www.cdep.ro/a5c3bf7c505f36931ab03ec91a31e18d64933ea5.html
+++ b/www.cdep.ro/a5c3bf7c505f36931ab03ec91a31e18d64933ea5.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Iriza_Scarlat.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Iriza_Scarlat.jpg" border=0 width="150" alt="Scarlat Iriza"></a>
+<img src="/parlamentari/l2012/Iriza_Scarlat.jpg" border=0 width="150" alt="Scarlat Iriza">
 <br>b.  3 sep. 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Scarlat IRIZA</h1>
 <div class="page-actions">
