200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=189&leg=2012

--- a/www.cdep.ro/f254022d98b2484072905adfc6b656c4df69ad0d.html
+++ b/www.cdep.ro/f254022d98b2484072905adfc6b656c4df69ad0d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Kerekes_Karoly.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Kerekes_Karoly.jpg" border=0 width="150" alt="Károly Kerekes"></a>
+<img src="/parlamentari/l2012/Kerekes_Karoly.jpg" border=0 width="150" alt="Károly Kerekes">
 <br>b.  14 dec. 1947
 </div><div class="boxTitle"><h1 style="line-height: 110%;">KEREKES Károly</h1>
 <div class="page-actions">
