200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=194&leg=2012

--- a/www.cdep.ro/2cf78e6ebd94c189e422fdc75b478a983d290dbb.html
+++ b/www.cdep.ro/2cf78e6ebd94c189e422fdc75b478a983d290dbb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Longher_Ghervazen.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Longher_Ghervazen.jpg" border=0 width="150" alt="Ghervazen Longher"></a>
+<img src="/parlamentari/l2012/Longher_Ghervazen.jpg" border=0 width="150" alt="Ghervazen Longher">
 <br>b.  3 jan. 1972
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ghervazen LONGHER</h1>
 <div class="page-actions">
