--- a/www.cdep.ro/4e5a381a39c0a62ab3a94a3f7b6733e369429eb0.html
+++ b/www.cdep.ro/4e5a381a39c0a62ab3a94a3f7b6733e369429eb0.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Man_Mircea.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Man_Mircea.jpg" border=0 width="150" alt="Mircea Man"></a>
+<img src="/parlamentari/l2012/Man_Mircea.jpg" border=0 width="150" alt="Mircea Man">
 <br>b.  26 nov. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mircea MAN</h1>
 <div class="page-actions">
