--- a/www.cdep.ro/b7153246762ea24e1ee33d5df840e756e6d72838.html
+++ b/www.cdep.ro/b7153246762ea24e1ee33d5df840e756e6d72838.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Marcoci_Vlad.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Marcoci_Vlad.jpg" border=0 width="150" alt="Vlad Marcoci"></a>
+<img src="/parlamentari/l2012/Marcoci_Vlad.jpg" border=0 width="150" alt="Vlad Marcoci">
 <br>b.  1 feb. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vlad MARCOCI</h1>
 <div class="page-actions">
