200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=211&leg=2012

--- a/www.cdep.ro/f7b17563f6ddbbda4db5d88e67bb77041772541a.html
+++ b/www.cdep.ro/f7b17563f6ddbbda4db5d88e67bb77041772541a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Mate_Andras.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mate_Andras.jpg" border=0 width="150" alt="András-Levente Máté"></a>
+<img src="/parlamentari/l2012/Mate_Andras.jpg" border=0 width="150" alt="András-Levente Máté">
 <br>b.  26 jan. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">MÁTÉ András-Levente</h1>
 <div class="page-actions">
