--- a/www.cdep.ro/995dfa637ee3be718aec10a57d8e0044226b3cc8.html
+++ b/www.cdep.ro/995dfa637ee3be718aec10a57d8e0044226b3cc8.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Militaru_Lucian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Militaru_Lucian.jpg" border=0 width="150" alt="Lucian Militaru"></a>
+<img src="/parlamentari/l2012/Militaru_Lucian.jpg" border=0 width="150" alt="Lucian Militaru">
 <br>b.  4 mar. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Lucian MILITARU</h1>
 <div class="page-actions">
