200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=223&leg=2012

--- a/www.cdep.ro/4e9c6cbb62026e718be2e2a7932193827b394b46.html
+++ b/www.cdep.ro/4e9c6cbb62026e718be2e2a7932193827b394b46.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Mironescu_Razvan_Horia.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mironescu_Razvan_Horia.jpg" border=0 width="150" alt="Rãzvan Horia Mironescu"></a>
+<img src="/parlamentari/l2012/Mironescu_Razvan_Horia.jpg" border=0 width="150" alt="Rãzvan Horia Mironescu">
 <br>b.  13 nov. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Rãzvan Horia MIRONESCU</h1>
 <div class="page-actions">
