--- a/www.cdep.ro/4d3c7d46e40e4864779364004b9c2d7833ce6ef7.html
+++ b/www.cdep.ro/4d3c7d46e40e4864779364004b9c2d7833ce6ef7.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Mirza_Gavril.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mirza_Gavril.jpg" border=0 width="150" alt="Gavril Mîrza"></a>
+<img src="/parlamentari/l2012/Mirza_Gavril.jpg" border=0 width="150" alt="Gavril Mîrza">
 <br>b.  27 jul. 1948
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gavril MÎRZA</h1>
 <div class="page-actions">
