200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=278&leg=2012

--- a/www.cdep.ro/65c7d2197abf58df7399081ee26f7f457bdd7888.html
+++ b/www.cdep.ro/65c7d2197abf58df7399081ee26f7f457bdd7888.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Pana_Adriana_Doina.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Pana_Adriana_Doina.jpg" border=0 width="150" alt="Adriana-Doina Panã"></a>
+<img src="/parlamentari/l2012/Pana_Adriana_Doina.jpg" border=0 width="150" alt="Adriana-Doina Panã">
 <br>b.  16 may 1957
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Adriana-Doina PANÃ</h1>
 <div class="page-actions">
