--- a/www.cdep.ro/edfb82a2d13ab7b1cbcc86c5f82ca750b99a5fe5.html
+++ b/www.cdep.ro/edfb82a2d13ab7b1cbcc86c5f82ca750b99a5fe5.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Paslaru_Florin_Costin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Paslaru_Florin_Costin.jpg" border=0 width="150" alt="Florin-Costin Pâslaru"></a>
+<img src="/parlamentari/l2012/Paslaru_Florin_Costin.jpg" border=0 width="150" alt="Florin-Costin Pâslaru">
 <br>b.  5 sep. 1959
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florin-Costin PÂSLARU</h1>
 <div class="page-actions">
