200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=286&leg=2012

--- a/www.cdep.ro/8b0c6677d2fb1088300bc8cbfbc20b8e00bec467.html
+++ b/www.cdep.ro/8b0c6677d2fb1088300bc8cbfbc20b8e00bec467.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Petrea_Dorin_Silviu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Petrea_Dorin_Silviu.jpg" border=0 width="150" alt="Dorin Silviu Petrea"></a>
+<img src="/parlamentari/l2012/Petrea_Dorin_Silviu.jpg" border=0 width="150" alt="Dorin Silviu Petrea">
 <br>b.  2 feb. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dorin Silviu PETREA</h1>
 <div class="page-actions">
