200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=288&leg=2012

--- a/www.cdep.ro/35ce4e14e64a9b133ee68e16d45f21fbd882c61f.html
+++ b/www.cdep.ro/35ce4e14e64a9b133ee68e16d45f21fbd882c61f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Petric-Octavian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Petric-Octavian.jpg" border=0 width="150" alt="Octavian Petric"></a>
+<img src="/parlamentari/l2012/Petric-Octavian.jpg" border=0 width="150" alt="Octavian Petric">
 <br>b.  1 oct. 1961
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Octavian PETRIC</h1>
 <div class="page-actions">
