200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=312&leg=2012

--- a/www.cdep.ro/39ef14f39bead22009e9004891861aae2e61a135.html
+++ b/www.cdep.ro/39ef14f39bead22009e9004891861aae2e61a135.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Rizea_Cristian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Rizea_Cristian.jpg" border=0 width="150" alt="Cristian Rizea"></a>
+<img src="/parlamentari/l2012/Rizea_Cristian.jpg" border=0 width="150" alt="Cristian Rizea">
 <br>b.  12 apr. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cristian RIZEA</h1>
 <div class="page-actions">
