--- a/www.cdep.ro/c6c3b756117fcd1cd487db223089cf9f13f61836.html
+++ b/www.cdep.ro/c6c3b756117fcd1cd487db223089cf9f13f61836.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Roman_Cristian_Constantin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Roman_Cristian_Constantin.jpg" border=0 width="150" alt="Cristian-Constantin Roman"></a>
+<img src="/parlamentari/l2012/Roman_Cristian_Constantin.jpg" border=0 width="150" alt="Cristian-Constantin Roman">
 <br>b.  2 jul. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cristian-Constantin ROMAN</h1>
 <div class="page-actions">
