--- a/www.cdep.ro/fbfca6e3aa7e5057bb2b596af39ad13dd75154e4.html
+++ b/www.cdep.ro/fbfca6e3aa7e5057bb2b596af39ad13dd75154e4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Rosca_Lucretia.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Rosca_Lucretia.jpg" border=0 width="150" alt="Lucreþia Roºca"></a>
+<img src="/parlamentari/l2012/Rosca_Lucretia.jpg" border=0 width="150" alt="Lucreþia Roºca">
 <br>b.  27 aug. 1958
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Lucreþia ROªCA</h1>
 <div class="page-actions">
