--- a/www.cdep.ro/62cf291535a19418c6068a93b359c4352bc4fd63.html
+++ b/www.cdep.ro/62cf291535a19418c6068a93b359c4352bc4fd63.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/SapunaruNini.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SapunaruNini.jpg" border=0 width="150" alt="Nini Sãpunaru"></a>
+<img src="/parlamentari/l2012/SapunaruNini.jpg" border=0 width="150" alt="Nini Sãpunaru">
 <br>b.  2 jun. 1963
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Nini SÃPUNARU</h1>
 <div class="page-actions">
