200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=416&leg=2012

--- a/www.cdep.ro/a80bf07a13d772dfeaf20aa5d0afbdb8310a6912.html
+++ b/www.cdep.ro/a80bf07a13d772dfeaf20aa5d0afbdb8310a6912.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Silaghi_Ovidiu_Ioan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Silaghi_Ovidiu_Ioan.jpg" border=0 width="150" alt="Ovidiu Ioan Silaghi"></a>
+<img src="/parlamentari/l2012/Silaghi_Ovidiu_Ioan.jpg" border=0 width="150" alt="Ovidiu Ioan Silaghi">
 <br>b.  12 dec. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ovidiu Ioan SILAGHI</h1>
 <div class="page-actions">
