--- a/www.cdep.ro/59bd6e57f29e6fde74564cc41ad192452fcc68d1.html
+++ b/www.cdep.ro/59bd6e57f29e6fde74564cc41ad192452fcc68d1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Stanciu_Zisu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Stanciu_Zisu.jpg" border=0 width="150" alt="Zisu Stanciu"></a>
+<img src="/parlamentari/l2012/Stanciu_Zisu.jpg" border=0 width="150" alt="Zisu Stanciu">
 <br>b.  28 dec. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Zisu STANCIU</h1>
 <div class="page-actions">
