200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=349&leg=2012

--- a/www.cdep.ro/f6f0ec7b8159897b5fd008073ed27e4969e5163e.html
+++ b/www.cdep.ro/f6f0ec7b8159897b5fd008073ed27e4969e5163e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/StrageaSorinConstantin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/StrageaSorinConstantin.jpg" border=0 width="150" alt="Sorin Constantin Stragea"></a>
+<img src="/parlamentari/l2012/StrageaSorinConstantin.jpg" border=0 width="150" alt="Sorin Constantin Stragea">
 <br>b.  5 aug. 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Sorin Constantin STRAGEA</h1>
 <div class="page-actions">
