--- a/www.cdep.ro/d5f6c148f9b7606715f770a05fbd59a6272b60cb.html
+++ b/www.cdep.ro/d5f6c148f9b7606715f770a05fbd59a6272b60cb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/SturzuMihaiRazvan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SturzuMihaiRazvan.jpg" border=0 width="150" alt="Mihai-Rãzvan Sturzu"></a>
+<img src="/parlamentari/l2012/SturzuMihaiRazvan.jpg" border=0 width="150" alt="Mihai-Rãzvan Sturzu">
 <br>b.  3 oct. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai-Rãzvan STURZU</h1>
 <div class="page-actions">
