--- a/www.cdep.ro/d97db2b5b02ef398c40c4fe77627bf2c839c2c6d.html
+++ b/www.cdep.ro/d97db2b5b02ef398c40c4fe77627bf2c839c2c6d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/SovaLucian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SovaLucian.jpg" border=0 width="150" alt="Lucian ªova"></a>
+<img src="/parlamentari/l2012/SovaLucian.jpg" border=0 width="150" alt="Lucian ªova">
 <br>b.  31 may 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Lucian ªOVA</h1>
 <div class="page-actions">
