--- a/www.cdep.ro/679c32399978a02d7e27ceb3b73378c191fcb048.html
+++ b/www.cdep.ro/679c32399978a02d7e27ceb3b73378c191fcb048.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TalosGheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TalosGheorghe.jpg" border=0 width="150" alt="Gheorghe-Mirel Taloº"></a>
+<img src="/parlamentari/l2012/TalosGheorghe.jpg" border=0 width="150" alt="Gheorghe-Mirel Taloº">
 <br>b.  3 dec. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe-Mirel TALOª</h1>
 <div class="page-actions">
