--- a/www.cdep.ro/95909cc83d60e1ceeca9df21f8a578eff15401dc.html
+++ b/www.cdep.ro/95909cc83d60e1ceeca9df21f8a578eff15401dc.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TararacheMihai.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TararacheMihai.jpg" border=0 width="150" alt="Mihai Tararache"></a>
+<img src="/parlamentari/l2012/TararacheMihai.jpg" border=0 width="150" alt="Mihai Tararache">
 <br>b.  30 mar. 1980
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai TARARACHE</h1>
 <div class="page-actions">
