--- a/www.cdep.ro/f2b2a5d8a191eb45b697d61ca1211cdb75262dbb.html
+++ b/www.cdep.ro/f2b2a5d8a191eb45b697d61ca1211cdb75262dbb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TamaianIoan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TamaianIoan.jpg" border=0 width="150" alt="Ioan Tãmâian"></a>
+<img src="/parlamentari/l2012/TamaianIoan.jpg" border=0 width="150" alt="Ioan Tãmâian">
 <br>b.  23 jun. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan TÃMÂIAN</h1>
 <div class="page-actions">
