--- a/www.cdep.ro/ab2b576238252fcac4dc130f3c47cc05564a7a05.html
+++ b/www.cdep.ro/ab2b576238252fcac4dc130f3c47cc05564a7a05.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TeodorescuCatalinFlorin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TeodorescuCatalinFlorin.jpg" border=0 width="150" alt="Cãtãlin-Florin Teodorescu"></a>
+<img src="/parlamentari/l2012/TeodorescuCatalinFlorin.jpg" border=0 width="150" alt="Cãtãlin-Florin Teodorescu">
 <br>b.  7 apr. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cãtãlin-Florin TEODORESCU</h1>
 <div class="page-actions">
