200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=380&leg=2012

--- a/www.cdep.ro/3ac3a352833c0885d867508f99fddabd03a0e14c.html
+++ b/www.cdep.ro/3ac3a352833c0885d867508f99fddabd03a0e14c.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TraicuRodin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TraicuRodin.jpg" border=0 width="150" alt="Rodin Traicu"></a>
+<img src="/parlamentari/l2012/TraicuRodin.jpg" border=0 width="150" alt="Rodin Traicu">
 <br>b.  4 oct. 1956
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Rodin TRAICU</h1>
 <div class="page-actions">
