200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=385&leg=2012

--- a/www.cdep.ro/c6ef6121eaf815ec5cc813267641e66f137ef1e7.html
+++ b/www.cdep.ro/c6ef6121eaf815ec5cc813267641e66f137ef1e7.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TusaAdrianaDiana.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TusaAdrianaDiana.jpg" border=0 width="150" alt="Adriana Diana Tuºa"></a>
+<img src="/parlamentari/l2012/TusaAdrianaDiana.jpg" border=0 width="150" alt="Adriana Diana Tuºa">
 <br>b.  22 jun. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Adriana Diana TUªA</h1>
 <div class="page-actions">
