--- a/www.cdep.ro/186793eb1d6ea5398f34470d5879ac49145a7ff6.html
+++ b/www.cdep.ro/186793eb1d6ea5398f34470d5879ac49145a7ff6.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Tigaeru_Rosca_Laurentiu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Tigaeru_Rosca_Laurentiu.jpg" border=0 width="150" alt="Laurenþiu Þigãeru Roºca"></a>
+<img src="/parlamentari/l2012/Tigaeru_Rosca_Laurentiu.jpg" border=0 width="150" alt="Laurenþiu Þigãeru Roºca">
 <br>b.  27 feb. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Laurenþiu ÞIGÃERU ROªCA</h1>
 <div class="page-actions">
