--- a/www.cdep.ro/7724cb70d0aac32baa656dde3d026939b9119635.html
+++ b/www.cdep.ro/7724cb70d0aac32baa656dde3d026939b9119635.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/UdristeGheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/UdristeGheorghe.jpg" border=0 width="150" alt="Gheorghe Udriºte"></a>
+<img src="/parlamentari/l2012/UdristeGheorghe.jpg" border=0 width="150" alt="Gheorghe Udriºte">
 <br>b.  6 oct. 1947
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe UDRIªTE</h1>
 <div class="page-actions">
