200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=395&leg=2012

--- a/www.cdep.ro/093680ba61adc93fe2d458d52decea5c4b6cd747.html
+++ b/www.cdep.ro/093680ba61adc93fe2d458d52decea5c4b6cd747.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/VargaLuciaAna.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/VargaLuciaAna.jpg" border=0 width="150" alt="Lucia-Ana Varga"></a>
+<img src="/parlamentari/l2012/VargaLuciaAna.jpg" border=0 width="150" alt="Lucia-Ana Varga">
 <br>b.  3 feb. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Lucia-Ana VARGA</h1>
 <div class="page-actions">
