--- a/www.cdep.ro/e4a89aa600b001a524bf0ea48f38a696beec1ec5.html
+++ b/www.cdep.ro/e4a89aa600b001a524bf0ea48f38a696beec1ec5.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/VulpescuIoan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/VulpescuIoan.jpg" border=0 width="150" alt="Ioan Vulpescu"></a>
+<img src="/parlamentari/l2012/VulpescuIoan.jpg" border=0 width="150" alt="Ioan Vulpescu">
 <br>b.  17 jun. 1976
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan VULPESCU</h1>
 <div class="page-actions">
