--- a/www.cdep.ro/91969401d8925884e32d70a031db9958b7db8eb2.html
+++ b/www.cdep.ro/91969401d8925884e32d70a031db9958b7db8eb2.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Zgonea_Valeriu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Zgonea_Valeriu.jpg" border=0 width="150" alt="Valeriu ªtefan Zgonea"></a>
+<img src="/parlamentari/l2012/Zgonea_Valeriu.jpg" border=0 width="150" alt="Valeriu ªtefan Zgonea">
 <br>b.  3 sep. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Valeriu ªtefan ZGONEA</h1>
 <div class="page-actions">
