--- a/www.cdep.ro/7b09890cb6380f8946e50f0df435f3a8d4a253bb.html
+++ b/www.cdep.ro/7b09890cb6380f8946e50f0df435f3a8d4a253bb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Rusanu_Dan_Radu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Rusanu_Dan_Radu.jpg" border=0 width="150" alt="Dan Radu Ruºanu"></a>
+<img src="/parlamentari/l2012/Rusanu_Dan_Radu.jpg" border=0 width="150" alt="Dan Radu Ruºanu">
 <br>b.  25 may 1950
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dan Radu RUªANU</h1>
 <div class="page-actions">
