--- a/www.cdep.ro/16b0d6058ab077a2b740a1e6053ee731ccd345e3.html
+++ b/www.cdep.ro/16b0d6058ab077a2b740a1e6053ee731ccd345e3.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Hellvig_Eduard_Raul.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Hellvig_Eduard_Raul.jpg" border=0 width="150" alt="Eduard Raul Hellvig"></a>
+<img src="/parlamentari/l2012/Hellvig_Eduard_Raul.jpg" border=0 width="150" alt="Eduard Raul Hellvig">
 <br>b.  27 oct. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Eduard Raul HELLVIG</h1>
 <div class="page-actions">
