200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=156&leg=2012

--- a/www.cdep.ro/ddd1f53f987aef142abbfa6e00dd5fdf35b5444a.html
+++ b/www.cdep.ro/ddd1f53f987aef142abbfa6e00dd5fdf35b5444a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Grosaru_Mircea.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Grosaru_Mircea.jpg" border=1 width="150" alt="Mircea Grosaru"></a>
+<img src="/parlamentari/l2012/Grosaru_Mircea.jpg" border=1 width="150" alt="Mircea Grosaru">
 <br>1952-2014
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mircea GROSARU</h1>
 <div class="page-actions">
