200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=77&leg=2012

--- a/www.cdep.ro/c23d715cfb9acb2c9ddefe16c2782a74267b0f97.html
+++ b/www.cdep.ro/c23d715cfb9acb2c9ddefe16c2782a74267b0f97.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Coman_Gheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Coman_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Coman"></a>
+<img src="/parlamentari/l2012/Coman_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Coman">
 <br>b.  5 may 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe COMAN</h1>
 <div class="page-actions">
