200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=149&leg=2012

--- a/www.cdep.ro/f8e6df4b9dd10bcee39ce519acc9f270cc4f56c9.html
+++ b/www.cdep.ro/f8e6df4b9dd10bcee39ce519acc9f270cc4f56c9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Giurescu_Dinu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Giurescu_Dinu.jpg" border=0 width="150" alt="Dinu Giurescu"></a>
+<img src="/parlamentari/l2012/Giurescu_Dinu.jpg" border=0 width="150" alt="Dinu Giurescu">
 <br>b.  15 feb. 1927
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dinu GIURESCU</h1>
 <div class="page-actions">
