200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=250&leg=2012

--- a/www.cdep.ro/2529d7921541ce1fec53edef8a2f22b6b140e000.html
+++ b/www.cdep.ro/2529d7921541ce1fec53edef8a2f22b6b140e000.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Nica_Dan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nica_Dan.jpg" border=0 width="150" alt="Dan Nica"></a>
+<img src="/parlamentari/l2012/Nica_Dan.jpg" border=0 width="150" alt="Dan Nica">
 <br>b.  2 jul. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dan NICA</h1>
 <div class="page-actions">
