--- a/www.cdep.ro/39a00fd1dd2d367bdd039f4b4d3d0baa601c9973.html
+++ b/www.cdep.ro/39a00fd1dd2d367bdd039f4b4d3d0baa601c9973.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/ScutaruAdrianGeorge.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/ScutaruAdrianGeorge.jpg" border=0 width="150" alt="Adrian George Scutaru"></a>
+<img src="/parlamentari/l2012/ScutaruAdrianGeorge.jpg" border=0 width="150" alt="Adrian George Scutaru">
 <br>b.  24 oct. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Adrian George SCUTARU</h1>
 <div class="page-actions">
