--- a/www.cdep.ro/6783fe266b3c11abe349ae26091086316c944a84.html
+++ b/www.cdep.ro/6783fe266b3c11abe349ae26091086316c944a84.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Ochi_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ochi_Ion.jpg" border=0 width="150" alt="Ion Ochi"></a>
+<img src="/parlamentari/l2012/Ochi_Ion.jpg" border=0 width="150" alt="Ion Ochi">
 <br>b.  2 mar. 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion OCHI</h1>
 <div class="page-actions">
