200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=300&leg=2012

--- a/www.cdep.ro/26a805f4edecb5d3bb07d4adc5de046a334eda90.html
+++ b/www.cdep.ro/26a805f4edecb5d3bb07d4adc5de046a334eda90.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Popescu_Florin_Aurelian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Popescu_Florin_Aurelian.jpg" border=0 width="150" alt="Florin Aurelian Popescu"></a>
+<img src="/parlamentari/l2012/Popescu_Florin_Aurelian.jpg" border=0 width="150" alt="Florin Aurelian Popescu">
 <br>b.  29 jun. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florin Aurelian POPESCU</h1>
 <div class="page-actions">
