200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=310&leg=2012

--- a/www.cdep.ro/0f569b5fccf61faee64bc667ee291fe0830f9723.html
+++ b/www.cdep.ro/0f569b5fccf61faee64bc667ee291fe0830f9723.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Ratoi_Neculai.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ratoi_Neculai.jpg" border=1 width="150" alt="Neculai Rãþoi"></a>
+<img src="/parlamentari/l2012/Ratoi_Neculai.jpg" border=1 width="150" alt="Neculai Rãþoi">
 <br>1939-2016
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Neculai RÃÞOI</h1>
 <div class="page-actions">
