200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=237&leg=2012

--- a/www.cdep.ro/96cd3a7509dff89230c67fd94cf512a6699f995f.html
+++ b/www.cdep.ro/96cd3a7509dff89230c67fd94cf512a6699f995f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Mot_Constantin_Stelian_Emil.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mot_Constantin_Stelian_Emil.jpg" border=0 width="150" alt="Constantin-Stelian-Emil Moþ"></a>
+<img src="/parlamentari/l2012/Mot_Constantin_Stelian_Emil.jpg" border=0 width="150" alt="Constantin-Stelian-Emil Moþ">
 <br>b.  23 apr. 1981
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Constantin-Stelian-Emil MOÞ</h1>
 <div class="page-actions">
