--- a/www.cdep.ro/511d1a7db52d345aaec6fa0236e26a0636233796.html
+++ b/www.cdep.ro/511d1a7db52d345aaec6fa0236e26a0636233796.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Florea_Daniel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Florea_Daniel.jpg" border=0 width="150" alt="Daniel Florea"></a>
+<img src="/parlamentari/l2012/Florea_Daniel.jpg" border=0 width="150" alt="Daniel Florea">
 <br>b.  19 sep. 1972
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Daniel FLOREA</h1>
 <div class="page-actions">
