200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=100&leg=2012

--- a/www.cdep.ro/f17e0e9c16a5fa1d870fb520e402e9cf160c6b01.html
+++ b/www.cdep.ro/f17e0e9c16a5fa1d870fb520e402e9cf160c6b01.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dima_Toader.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dima_Toader.jpg" border=0 width="150" alt="Toader Dima"></a>
+<img src="/parlamentari/l2012/Dima_Toader.jpg" border=0 width="150" alt="Toader Dima">
 <br>b.  25 feb. 1951
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Toader DIMA</h1>
 <div class="page-actions">
