--- a/www.cdep.ro/fd1680cb868fa489e344702b9dea026d74f4ece1.html
+++ b/www.cdep.ro/fd1680cb868fa489e344702b9dea026d74f4ece1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Radulescu_Constantin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Radulescu_Constantin.jpg" border=0 width="150" alt="Constantin Rãdulescu"></a>
+<img src="/parlamentari/l2012/Radulescu_Constantin.jpg" border=0 width="150" alt="Constantin Rãdulescu">
 <br>b.  17 jan. 1976
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Constantin RÃDULESCU</h1>
 <div class="page-actions">
