200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=47&leg=2012

--- a/www.cdep.ro/62f743dc96e1af0f20d73bc6100d09d6bbdba9aa.html
+++ b/www.cdep.ro/62f743dc96e1af0f20d73bc6100d09d6bbdba9aa.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Buican_Cristian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Buican_Cristian.jpg" border=0 width="150" alt="Cristian Buican"></a>
+<img src="/parlamentari/l2012/Buican_Cristian.jpg" border=0 width="150" alt="Cristian Buican">
 <br>b.  16 sep. 1966
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cristian BUICAN</h1>
 <div class="page-actions">
