200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=50&leg=2012

--- a/www.cdep.ro/268be29b4ccf0a9c5e91c422a802eb40f204f9b4.html
+++ b/www.cdep.ro/268be29b4ccf0a9c5e91c422a802eb40f204f9b4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Calimente_Mihaita.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Calimente_Mihaita.jpg" border=0 width="150" alt="Mihãiþã Calimente"></a>
+<img src="/parlamentari/l2012/Calimente_Mihaita.jpg" border=0 width="150" alt="Mihãiþã Calimente">
 <br>b.  22 sep. 1952
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihãiþã CALIMENTE</h1>
 <div class="page-actions">
