200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=71&leg=2012

--- a/www.cdep.ro/f6346b002fecc07aeaf7cddbc766dabdf0c6941a.html
+++ b/www.cdep.ro/f6346b002fecc07aeaf7cddbc766dabdf0c6941a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ciubotaru_Lucian_Manuel.jpg" border=0 width="150" alt="Lucian-Manuel Ciubotaru">
+<a href="/parlamentari/l2012/mari/Ciubotaru_Lucian_Manuel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ciubotaru_Lucian_Manuel.jpg" border=0 width="150" alt="Lucian-Manuel Ciubotaru"></a>
 <br>b.  17 jun. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Lucian-Manuel CIUBOTARU</h1>
 <div class="page-actions">
