200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=80&leg=2012

--- a/www.cdep.ro/a07348709474237eeae8652dd6b0c3ddde8ac7ea.html
+++ b/www.cdep.ro/a07348709474237eeae8652dd6b0c3ddde8ac7ea.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Constantin_Daniel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Constantin_Daniel.jpg" border=0 width="150" alt="Daniel Constantin"></a>
+<img src="/parlamentari/l2012/Constantin_Daniel.jpg" border=0 width="150" alt="Daniel Constantin">
 <br>b.  26 jun. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Daniel CONSTANTIN</h1>
 <div class="page-actions">
