200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=83&leg=2012

--- a/www.cdep.ro/0d99d86ad29ec6e08f59a3c77df94bcf4f9e5da4.html
+++ b/www.cdep.ro/0d99d86ad29ec6e08f59a3c77df94bcf4f9e5da4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Covaci_Dorel.jpg" border=0 width="150" alt="Dorel Covaci">
+<a href="/parlamentari/l2012/mari/Covaci_Dorel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Covaci_Dorel.jpg" border=0 width="150" alt="Dorel Covaci"></a>
 <br>b.  20 sep. 1950
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dorel COVACI</h1>
 <div class="page-actions">
