200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=98&leg=2012

--- a/www.cdep.ro/f7a5fd733995a1d2233003b6bbd3cf241e7d55a0.html
+++ b/www.cdep.ro/f7a5fd733995a1d2233003b6bbd3cf241e7d55a0.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Diaconu_Adrian_Nicolae.jpg" border=0 width="150" alt="Adrian-Nicolae Diaconu">
+<a href="/parlamentari/l2012/mari/Diaconu_Adrian_Nicolae.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Diaconu_Adrian_Nicolae.jpg" border=0 width="150" alt="Adrian-Nicolae Diaconu"></a>
 <br>b.  26 nov. 1966
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Adrian-Nicolae DIACONU</h1>
 <div class="page-actions">
