200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=107&leg=2012

--- a/www.cdep.ro/836709a2522d5e9cf3db2d000f878d99f656e917.html
+++ b/www.cdep.ro/836709a2522d5e9cf3db2d000f878d99f656e917.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dolha_Mircea.jpg" border=0 width="150" alt="Mircea Dolha">
+<a href="/parlamentari/l2012/mari/Dolha_Mircea.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dolha_Mircea.jpg" border=0 width="150" alt="Mircea Dolha"></a>
 <br>b.  24 may 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mircea DOLHA</h1>
 <div class="page-actions">
