200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=122&leg=2012

--- a/www.cdep.ro/505c8e0c9e20ca7d671c06e550e6e263b23f661a.html
+++ b/www.cdep.ro/505c8e0c9e20ca7d671c06e550e6e263b23f661a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dumitru_Ovidiu_Ioan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dumitru_Ovidiu_Ioan.jpg" border=0 width="150" alt="Ovidiu-Ioan Dumitru"></a>
+<img src="/parlamentari/l2012/Dumitru_Ovidiu_Ioan.jpg" border=0 width="150" alt="Ovidiu-Ioan Dumitru">
 <br>b.  29 oct. 1980
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ovidiu-Ioan DUMITRU</h1>
 <div class="page-actions">
