200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=127&leg=2012

--- a/www.cdep.ro/2bf75ed37d363151554847029be1c8bc820301fc.html
+++ b/www.cdep.ro/2bf75ed37d363151554847029be1c8bc820301fc.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Eparu_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Eparu_Ion.jpg" border=0 width="150" alt="Ion Eparu"></a>
+<img src="/parlamentari/l2012/Eparu_Ion.jpg" border=0 width="150" alt="Ion Eparu">
 <br>b.  6 jun. 1952
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion EPARU</h1>
 <div class="page-actions">
