200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=145&leg=2012

--- a/www.cdep.ro/2d3ec5ad978144d094c4931063d3009bfbb038bb.html
+++ b/www.cdep.ro/2d3ec5ad978144d094c4931063d3009bfbb038bb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ghera_Giureci_Slobodan.jpg" border=0 width="150" alt="Giureci-Slobodan Ghera">
+<a href="/parlamentari/l2012/mari/Ghera_Giureci_Slobodan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ghera_Giureci_Slobodan.jpg" border=0 width="150" alt="Giureci-Slobodan Ghera"></a>
 <br>b.  15 apr. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Giureci-Slobodan GHERA</h1>
 <div class="page-actions">
